<resources>
    <string name="app_name">THỜI TIẾT</string>
    <string name="location_name">Vị trí thực tế:</string>
    <string name="select_location">Chọn vị trí</string>

    <string name="weather_forecast">Dự báo thời tiết:</string>
    <string name="weather_icon">Biểu tượng thời tiết:</string>
    <string name="weather_icon2">Biểu tượng thời tiết:</string>
    <string name="weather_icon4">Biểu tượng thời tiết:</string>
    <string name="weather_icon5">Biểu tượng thời tiết:</string>
    <string name="weather_icon6">Biểu tượng thời tiết:</string>
    <string name="weather_icon7">Biểu tượng thời tiết:</string>
    <string name="weather_description_placeholder">Mô tả thời tiết sẽ được hiển thị ở đây</string>
    <string name="temperature_placeholder">Nhiệt độ sẽ được hiển thị ở đây</string>
    <string name="weather_icon_description">Weather icon</string>
    <string name="enter_city_hint">Nhập tên thành phố</string>

    <string name="search_button">Search</string>
    <string name="searching">Searching...</string>
    <string name="no_results">No results found</string>
    <string name="error_message">An error occurred. Please try again later.</string>

    <string name="nav_item1">Item 1</string>
    <string name="nav_item2">Item 2</string>
    <!-- Add more menu item strings here -->
    <string name="cityEditText">cityEditText</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>
