<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent">

<!-- Main content layout -->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_weather_default"
        android:contentDescription="@string/weather_icon_description" />
    <ImageView
        android:id="@+id/weather_icon7"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="220dp"
        android:contentDescription="@string/weather_icon7"
        android:src="@drawable/d1" />

    <EditText
        android:id="@+id/citySearchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_city_hint"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="text" />


    <Button
        android:id="@+id/searchButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/citySearchEditText"
        android:layout_marginTop="-72dp"
        android:layout_marginLeft="300dp"
        android:text="Search" />



    <ImageView

        android:id="@+id/weather_icon3"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/locationTextView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/weather_icon2"
        android:scaleType="centerCrop"
        android:src="@drawable/border"
        />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/ic_weather_rainy" />


    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_icon"
        android:layout_marginTop="-40dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />


    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationTextView"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:prompt="@string/select_location" />


    <ImageView
        android:id="@+id/weather_icon2"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/locationTextView"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/weather_icon2"
        android:scaleType="centerCrop"
        android:src="@drawable/border"/>

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_below="@id/locationSpinner"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp" />
    <ImageView
        android:id="@+id/weather_icon5"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_below="@id/locationSpinner"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/weather_icon5"
        android:scaleType="centerCrop"
        android:src="@drawable/c1" />
    <TextView
        android:id="@+id/weatherDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:layout_below="@id/temperatureTextView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:layout_below="@id/weatherDescriptionTextView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/windSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:layout_below="@id/humidityTextView"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp" />

    <ImageView
        android:id="@+id/weather_icon6"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_below="@id/locationTextView"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/weather_icon6"
        android:src="@drawable/c2" />
    <TextView
        android:id="@+id/feelsLikeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@id/locationTextView"
        android:layout_marginLeft="240dp"


        android:textSize="10sp" />

    <TextView
        android:id="@+id/minMaxTempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feelsLikeTextView"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="10dp"

        android:textSize="10sp" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minMaxTempTextView"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp" />
    <TextView
        android:id="@+id/dtIsoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressureTextView"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp" />
    <TextView
        android:id="@+id/timezoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dtIsoTextView"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        />
    <ImageView
        android:id="@+id/weather_icon4"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/pressureTextView"
        android:contentDescription="@string/weather_icon4"
        android:src="@drawable/border2"
        />

</RelativeLayout>


<!-- Left-side navigation drawer -->
<com.google.android.material.navigation.NavigationView
    android:id="@+id/navigation_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start">

</com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
